--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -22,7 +22,8 @@
     }
 
     .siteMap .container {
-      display: flex;
+      flex-direction: row;
+      --gap: 8%;
       padding-block: 8%;
 
       .accordion {
